# debian-inspector

./: CHANGELOG.rst  README.rst  azure-pipelines.yml  requirements.txt  setup.cfg
docs/source/: conf.py  index.rst
docs/source/api/: debian_inspector.contents.rst  debian_inspector.copyright.rst  debian_inspector.coverage.rst  debian_inspector.deb822.rst  debian_inspector.debcon.rst  debian_inspector.deps.rst  debian_inspector.package.rst  debian_inspector.rst  debian_inspector.unsign.rst  debian_inspector.utils.rst  debian_inspector.version.rst  modules.rst
src/debian_inspector/: __init__.py  contents.py  copyright.py  coverage.py  deb822.py  debcon.py  deps.py  package.py  unsign.py  utils.py  version.py
src/debut/: __init__.py  contents.py  control.py  copyright.py  coverage.py  debcon.py  deps.py  package.py  unsign.py  utils.py  version.py  version.py.ABOUT
tests/: test_contents.py  test_copyright.py  test_deb822.py  test_debcon.py  test_deps.py  test_package.py  test_unsign.py  test_utils.py  test_version.py  test_version_python_deb_pkg_tools.py
tests/data/alpine/: alpine-installed-expected.json
tests/data/contents/: debian_Contents-amd64  debian_Contents-amd64.gz-expected.json  ubuntu_Contents-i386  ubuntu_Contents-i386-expected.json
tests/data/copyright/: debian-slim-gpgv.copyright-expected-DebianCopyright.json  dep5-b43-fwcutter.copyright-expected-DebianCopyright.json  dep5-b43-fwcutter.copyright-expected.dumps  dep5-rpm.copyright-expected-DebianCopyright.json  dep5-rpm.copyright-expected.dumps  dropbear.copyright-expected-DebianCopyright.json  dropbear.copyright-expected.dumps  dupe-field.copyright  dupe-field.copyright-expected-DebianCopyright.json  test-licence-license.copyright  test-licence-license.copyright-expected-DebianCopyright.json
tests/data/deb822/: dep5-b43-fwcutter.copyright  dep5-b43-fwcutter.copyright-expected.json  dep5-rpm.copyright-expected.json  dropbear.copyright-expected.json  empty_lines.copyright  empty_lines.copyright-expected.json
tests/data/debcon/copyright/: dep5-b43-fwcutter.copyright-expected.json  dep5-rpm.copyright-expected.json  dropbear.copyright-expected.json
tests/data/debcon/deb822/: one_status  one_status_junk  one_status_junk-expected-deb822.json  zlib_1.2.11.dfsg-1.dsc-expected-deb822.json
tests/data/debcon/dsc/: zlib_1.2.11.dfsg-1.dsc-expected-no-desig.json
tests/data/debcon/sources/: simple_sources-expected.json
tests/data/debcon/status/: one_status  one_status-expected.json  perl_status-expected.json  simple_status  simple_status-expected-py2.json  simple_status-expected.json
tests/dpkg-tests/: README.rst  test_version_dpkg.py  test_version_dpkg.py.ABOUT  test_version_python_debian.py  test_version_python_debian.py.ABOUT
