[metadata]
name = debian_inspector
license = Apache-2.0 AND BSD-3-Clause AND MIT

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = Utilities to parse Debian package, copyright and control files.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/nexB/debian-inspector

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Utilities

keywords =
    utilities
    deb822
    debian
    copyright
    package
    dependency
    license
    dep5
    control
    dsc
    python-debian
    dpkg
    libapt

license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

setup_requires = setuptools_scm[toml] >= 4

python_requires = >=3.6.*

install_requires =
    chardet >= 3.0.0
    attrs >=19.2, !=20.1.0


[options.packages.find]
where = src


[options.extras_require]
testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    aboutcode-toolkit >= 6.0.0
    black
    commoncode

docs =
    Sphinx >= 3.3.1
    sphinx-rtd-theme >= 0.5.0
    doc8 >= 0.8.1
